src/objects/zaapit__ZaapIT_General_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>ZaapIT General Settings - multi-purpose settings</description>
    <fields>
        <fullName>zaapit__field1__c</fullName>
        <label>field1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zaapit__field2__c</fullName>
        <label>field2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zaapit__field3__c</fullName>
        <label>field3</label>
        <type>TextArea</type>
    </fields>
    <label>ZaapIT General Settings</label>
</CustomObject>